2009-02-23  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	More fixes for Solaris, including fixes for the Sunpro compiler:
	* avr.h: Remove stray semicolon.
	* configure.ac: Add check for predefined types uint_t and ulong_t.
	* confwin.c: Include "avrdude.h" on top to avoid empty translation
	unit warning.
	* ppwin.c: (Ditto.)
	* ser_win32.c: (Ditto.)
	* serbb_win32.c: (Ditto.)
	* jtagmkII.c (jtagmkII_recv): remove unreachable "return".
	* stk500.c (stk500_initialize): (Ditto.)
	* par.c: Test for both, __sun__ and __sun to see whether we are
	being compiled on Solaris.
	* ppi.c: (Ditto.)
	* stk500v2.c: Implement the DEBUG and DEBUGRECV macros in a way
	that is compatible with the ISO C99 standard.
	* usbtiny.c: Only typedef uint_t and ulong_t if they have not
	been found already by the autoconf checks.

2009-02-23  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #22204: Solaris10/11 Undefiniertes Symbol gethostbyname socket
	connect
	* configure.ac: Add checks for gethostent() and socket().
	While being here, remove some old cruft left from ancient days.

2009-02-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* lexer.l: Bump the %p size so AT&T lex will continue to work.

2009-02-19  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	(Partially) submitted by John Voltz:
	bug #20004: AVRDUDE update (-U) operations do not close files
	* fileio.c (fmt_autodetect, fileio): fclose() files.

2009-02-18  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* usbtiny.c: Replace all but one (very unlikely to trigger) exit(1)
	by return -1.

2009-02-18  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Dick Streefland:
	patch #6749: make reading from the USBtinyISP programmer more robust
	* usbtiny.c: Add code to retry failed communication attempts.

2009-02-17  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Nick Hibma:
	bug #22271: usb_reset in usb_libusb.c not necessary in FreeBSD 6.x
	* usb_libusb.c (usbdev_close): Do not call usb_reset() on FreeBSD.
	It is not necessary there.
